--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.1.0",
+    "@hookform/resolvers": "^3.1.1",
     "@monaco-editor/react": "^4.5.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
@@ -56,7 +56,7 @@
     "langchain": "^0.0.61",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.171.0",
-    "material-react-table": "^1.12.0",
+    "material-react-table": "^1.13.1",
     "next-themes": "^0.2.1",
     "rasterizehtml": "^1.3.1",
     "react": "^18.2.0",
@@ -64,15 +64,15 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-i18next": "^12.3.1",
-    "react-router": "^6.12.1",
-    "react-router-dom": "^6.12.1",
+    "react-router": "^6.13.0",
+    "react-router-dom": "^6.13.0",
     "react-spinners": "^0.13.8",
     "save-svg-as-png": "^1.4.17",
     "swr": "^2.1.5",
-    "tailwind-merge": "^1.13.1",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
     "valtio": "^1.10.5",
-    "xterm": "^5.2.0",
+    "xterm": "^5.2.1",
     "xterm-addon-canvas": "^0.3.0",
     "xterm-addon-fit": "^0.7.0",
     "zod": "^3.21.4"
@@ -82,15 +82,17 @@
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^17.0.45",
-    "@types/react": "^18.2.9",
-    "@types/react-dom": "^18.2.4",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.42.0",
+    "eslint": "^8.43.0",
     "eslint-config-next": "13.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.12.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
